P01/Tests/SyntaxErrors/statenames3.tm
states 3
A
ThisIsALongStatename +
SoIsThis -
alphabet 1 #
